# KyberForge

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  GOVERNANCE.md  LICENCE  LICENSE  NOTICE  README.md  pyproject.toml  pyrightconfig.json
.claude/: brand-voice-guidelines.md  plan-convert-pip-requirements-to-conda.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: proposal_issue_report.md  question.md
app/: .env.example  alembic.ini  main.py  makemigration.sh  start.sh
app/alembic/: env.py
app/api/: endpoint.py  event_stream_generator.py  events.py  openai.py  router.py
app/core/: exceptions.py  langfuse_config.py  schema.py  task.py  validate.py  workflow.py
app/core/nodes/: agent.py  base.py  (+3 more)
app/database/: database_utils.py  event.py  repository.py  session.py
app/prompts/: customer_ticket_response.j2  template.j2  ticket_analysis.j2
app/schemas/: example_customer_care_schema.py  openai_schema.py  streaming_example_schema.py  streaming_schema.py
app/services/: prompt_loader.py
app/utils/: chunking_utils.py  event_stream_generator.py
app/worker/: config.py  tasks.py
app/workflows/: example_customer_care_workflow.py  example_streaming_workflow.py  streaming_example_workflow.py  streaming_workflow.py  workflow_registry.py
docker/: .env.example  Caddyfile  Dockerfile.api  Dockerfile.celery  docker-compose.caddy.yml  docker-compose.launchpad.yml  docker-compose.supabase.yml  docker-compose.yml  logs.sh  start.sh  stop.sh
playground/: prompt_playground.py  visualize_workflow.py  workflow_playground.py
playground/utils/: event_loader.py  visualize_workflow.py
requests/: send_event.py
(+23 files in other folders)
